chore: update routes in the doc
