# docs/swagger.json
@@ -14,7 +14,36 @@
     },
     "host": "localhost:8000",
     "paths": {
-        "/account": {
+        "/accounts": {
+            "get": {
+                "description": "Get all accounts actually in the system",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/output.AccountOutputVO"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "With the data received, validate her and if all is correct, and dont exist a account with that document, create a new account",
                 "consumes": [
@@ -56,7 +85,7 @@
                 }
             }
         },
-        "/account/balance": {
+        "/accounts/balance": {
             "get": {
                 "description": "With a authorization token valid, return the balance of a account",
                 "produces": [
@@ -93,7 +122,7 @@
                 }
             }
         },
-        "/account/login": {
+        "/login": {
             "post": {
                 "description": "With the data received, validate if is correct, and log the user, returning a token of authorization",
                 "consumes": [
@@ -135,79 +164,7 @@
                 }
             }
         },
-        "/accounts": {
-            "get": {
-                "description": "Get all accounts actually in the system",
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/output.AccountOutputVO"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
-                        }
-                    }
-                }
-            }
-        },
         "/transfer": {
-            "get": {
-                "description": "With a valid Authorization Token, get all the transfers that has made or received by the account",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization Token",
-                        "name": "authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/output.TransferOutputVO"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_transfer_vo_output.OutputError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_transfer_vo_output.OutputError"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "With the data received, validate her and if all is correct, create a new transfer, and update the balance of accounts",
                 "consumes": [
@@ -239,6 +196,49 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/output.TransferOutputVO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/stoneBanking_app_gateway_http_transfer_vo_output.OutputError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/stoneBanking_app_gateway_http_transfer_vo_output.OutputError"
+                        }
+                    }
+                }
+            }
+        },
+        "/transfers": {
+            "get": {
+                "description": "With a valid Authorization Token, get all the transfers that has made or received by the account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization Token",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/output.TransferOutputVO"
+                            }
                         }
                     },
                     "400": {
